--- a/pt7-pigGame/style.css
+++ b/pt7-pigGame/style.css
@@ -16,7 +16,7 @@ body {
   font-weight: 400;
   height: 100vh;
   color: #333;
-  background-image: linear-gradient(to top left, #753682 0%, #bf2e34 100%);
+  background-image: linear-gradient(to top left, #373682 0%, #bf2e34 100%);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -122,13 +122,13 @@ main {
   border-radius: 50rem;
   box-shadow: 0 1.75rem 3.5rem rgba(0, 0, 0, 0.1);
 }
-
+/*
 .btn::first-letter {
   font-size: 2.4rem;
   display: inline-block;
   margin-right: 0.7rem;
 }
-
+*/
 .btn--new {
   top: 4rem;
 }
